Fix out of viewport previous & next buttons.

--- a/app/escriptorium/static/css/escriptorium.css
+++ b/app/escriptorium/static/css/escriptorium.css
@@ -219,16 +219,11 @@ body {
 
 /* transcription interface  */
 .nav-btn {
-    position: absolute;
     font-size: 50px;
 }
 
-.nav-btn.nav-prev {
-    left: -30px;
-}
-
-.nav-btn.nav-next {
-    right: -30px;
+.col-sides {
+    width: 30px;
 }
 
 #img-panel, #img-tools, #binar-panel, #seg-panel,
